--- a/assets/css/chessboard-0.3.0.css
+++ b/assets/css/chessboard-0.3.0.css
@@ -35,7 +35,7 @@
 
 .heattile-45c36 {
 	/* position: absolute; */
-	/* border: 2px solid #00000000; */
+	/* border: 1px solid #000000; */
 }
 .heattile-45c36:hover {
 	/* border-color: red; */
