--- a/assets/css/chessboard-0.3.0.css
+++ b/assets/css/chessboard-0.3.0.css
@@ -19,6 +19,11 @@
 	box-sizing: content-box;
 }
 
+.piece-417db {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 /* square */
 .square-55d63 {
 	float: left;
@@ -44,11 +49,12 @@
 .heatvalue-22bf39 {
 	cursor: default;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 10px;
+	font-size: 11px;
 	position: absolute;
-	top: -2px;
+	top: 0px;
 	right: 3px;
 	color: black;
+	/* background-color: rgba(0, 0, 0, 0.371); */
 }
 
 /* white square */
